--- a/portfolio.html
+++ b/portfolio.html
@@ -13,23 +13,24 @@
 </head>
 <body>
     
-    <header>
-        <nav>
-            <a href="">
-            <span>Web</span>Studio
+       <!--COMPONENTS-->
+       <header class="header">
+        <nav class="heade-nav">
+            <a class="logo link" >
+            <span class="logo-color">Web</span>Studio
         </a>
-        <ul>
-            <li><a href="">Студия</a></li>
-            <li><a href="">Портфолио</a></li>
-            <li><a href="">Контакты</a></li>
+        <ul class="nav-list list" >
+            <li class="nav-item"><a href="./index.html" class="nav-link link" href="">Студия</a></li>
+            <li class="nav-item"><a class="active nav-link link" href="">Портфолио</a></li>
+            <li class="nav-item"><a class="nav-link link" href="">Контакты</a></li>
         </ul>
         </nav>
-        <ul>
+        <ul class="info-link list">
             <li>
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a class="info link"  href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-              <a href="tel:+380961111111">+38 096 111 11 11</a>
+              <a class="info link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
     </header>
@@ -37,101 +38,104 @@
     <main>
         <!--MENU-->
         <selection>
-            <ul>
-                <li>
-                    <button type="button">
+            <h1 hidden>Портфолио</h1>
+            <ul class="list">
+                <li class="link">
+                    <button class="btn-menu" type="button">
                         Все
                     </button>
                 </li>
-                <li>
-                    <button type="button">
+                <li class="link">
+                    <button class="btn-menu" type="button">
                         Заказать услугу
                     </button>
                 </li>
-                <li>
-                    <button type="button">
+                <li class="link">
+                    <button class="btn-menu"  type="button">
                         Приложения
                     </button>
                 </li>
-                <li>
-                    <button type="button">
+                <li class="link" >
+                    <button class="btn-menu" type="button">
                         Дизайн
                     </button>
                 </li>
-                <li>
-                    <button type="button">
+                <li class="link">
+                    <button class="btn-menu" type="button">
                         Маркетинг
                     </button>
                 </li>
             </ul>
         </selection>
+
         <!--PORTFOLIO-->
-        <selecton>
-            <ul>
-                <li>
-                    <img src="./img/img10.jpg" width="370" height="294" alt="Технокряк" />
-                    <h3>Технокряк</h3>
-                    <p>Веб-сайт</p>
+        <selecton class="portfolio">
+            <h2 hidden >Сайты</h2>
+            <ul class="list">
+                <li class="link">
+                    <img src="./images/img10.jpg" width="370" height="294" alt="Технокряк" />
+                    <h3 class="site-name">Технокряк</h3>
+                    <p class="preview-name">Веб-сайт</p>
                 </li>
-                <li>
-                    <img src="./img/img5.jpg" width="370" height="294" alt="Постер New Orlean vs Golden Star" />
-                    <h3>Постер New Orlean vs Golden Star</h3>
-                    <p>Дизайн</p>
+                <li class="link">
+                    <img src="./images/img5.jpg" width="370" height="294" alt="Постер New Orlean vs Golden Star" />
+                    <h3 class="site-name">Постер New Orlean vs Golden Star</h3>
+                    <p class="preview-name">Дизайн</p>
                 </li>
-                <li>
-                    <img src="./img/img6.jpg" width="370" height="294" alt="Ресторан Seafood" />
-                    <h3>Ресторан Seafood</h3>
-                    <p>Приложение</p>
+                <li class="link" >
+                    <img src="./images/img6.jpg" width="370" height="294" alt="Ресторан Seafood" />
+                    <h3 class="site-name" >Ресторан Seafood</h3>
+                    <p class="preview-name">Приложение</p>
                 </li>
-                <li>
-                    <img src="./img/img8.jpg" width="370" height="294" alt="Проект Prime" />
-                    <h3>Проект Prime</h3>
-                    <p>Маркетинг</p>
+                <li class="link">
+                    <img src="./images/img8.jpg" width="370" height="294" alt="Проект Prime" />
+                    <h3 class="site-name">Проект Prime</h3>
+                    <p class="preview-name">Маркетинг</p>
                 </li>
-                <li>
-                    <img src="./img/img13.jpg" width="370" height="294" alt="Проект Boxes" />
-                    <h3>Проект Boxes</h3>
-                    <p>Приложение</p>
+                <li class="link">
+                    <img src="./images/img13.jpg" width="370" height="294" alt="Проект Boxes" />
+                    <h3 class="site-name">Проект Boxes</h3>
+                    <p class="preview-name" >Приложение</p>
                 </li>
-                <li>
-                    <img src="./img/img12.jpg" width="370" height="294" alt="Inspiration has no Borders" />
-                    <h3>Inspiration has no Borders</h3>
-                    <p>Веб-сайт</p>
+                <li class="link">
+                    <img src="./images/img12.jpg" width="370" height="294" alt="Inspiration has no Borders" />
+                    <h3 class="site-name">Inspiration has no Borders</h3>
+                    <p class="preview-name">Веб-сайт</p>
                 </li>
-                <li>
-                    <img src="./img/img7.jpg" width="370" height="294" alt="Издание Limited Edition" />
-                    <h3>Издание Limited Edition</h3>
-                    <p>Дизайн</p>
+                <li class="link">
+                    <img src="./images/img7.jpg" width="370" height="294" alt="Издание Limited Edition" />
+                    <h3 class="site-name">Издание Limited Edition</h3>
+                    <p class="preview-name">Дизайн</p>
                 </li>
-                <li>
-                    <img src="./img/img11.jpg" width="370" height="294" alt="Проект LAB" />
-                    <h3>Проект LAB</h3>
-                    <p>Маркетинг</p>
+                <li class="link" >
+                    <img src="./images/img11.jpg" width="370" height="294" alt="Проект LAB" />
+                    <h3 class="site-name">Проект LAB</h3>
+                    <p class="preview-name">Маркетинг</p>
                 </li>
-                <li>
-                    <img src="./img/img9.jpg" width="370" height="294" alt="Growing Business" />
-                    <h3>ПGrowing Business</h3>
-                    <p>Приложение</p>
+                <li class="link">
+                    <img src="./images/img9.jpg" width="370" height="294" alt="Growing Business" />
+                    <h3 class="site-name">Growing Business</h3>
+                    <p class="preview-name">Приложение</p>
                 </li>
             </ul>
         </selecton>
     </main>
 
     <!--CONTACTS-->
-    <footer>
-        <a href=""><span>Web</span>Studio </a>
-    <address>
-        <ul>
+    <footer class="contacts">
+        <a class="link logo logo-contacts" href=""><span class="logo-color">Web</span>Studio </a>
+    <address class="address">
+        <ul class="list">
           <li>
-            <a href="https://goo.gl/maps/Kj9o169cFubhBfax5" target="_blank" rel="noopener noreferrer">
+            <a class="link maps" href="https://goo.gl/maps/Kj9o169cFubhBfax5" target="_blank" rel="noopener noreferrer">
               г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link contacts-info" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link contacts-info" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
