--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Студия</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&family=Roboto:wght@400;500;700;900&display=swap"
-    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
      integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g==" crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/styles.css">
@@ -20,8 +19,8 @@
             <span class="logo-color">Web</span>Studio
         </a>
         <ul class="nav-list list" >
-            <li class="nav-item"><a class="nav-link link" href="">Студия</a></li>
-            <li class="nav-item"><a class="nav-link link" href="">Портфолио</a></li>
+            <li class="nav-item"><a class="active nav-link link" href="">Студия</a></li>
+            <li class="nav-item"><a href="./portfolio.html" class="nav-link link" href="">Портфолио</a></li>
             <li class="nav-item"><a class="nav-link link" href="">Контакты</a></li>
         </ul>
         </nav>
