--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
         </a>
         <ul class="nav-list list" >
             <li class="nav-item"><a href="./index.html" class="nav-link link" href="">Студия</a></li>
-            <li class="nav-item"><a class="active nav-link link" href="">Портфолио</a></li>
+            <li class="nav-item"><a class="active nav-link link">Портфолио</a></li>
             <li class="nav-item"><a class="nav-link link" href="">Контакты</a></li>
         </ul>
         </nav>
