--- a/portfolio.html
+++ b/portfolio.html
@@ -20,9 +20,9 @@
             <span class="logo-color">Web</span>Studio
         </a>
         <ul class="nav-list list" >
-            <li class="nav-item"><a href="./index.html" class="nav-link link" href="">Студия</a></li>
+            <li class="nav-item"><a href="./index.html" class="nav-link link">Студия</a></li>
             <li class="nav-item"><a class="active nav-link link">Портфолио</a></li>
-            <li class="nav-item"><a class="nav-link link" href="">Контакты</a></li>
+            <li class="nav-item"><a class="nav-link link" >Контакты</a></li>
         </ul>
         </nav>
         <ul class="info-link list">
