--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <span class="logo-color">Web</span>Studio
         </a>
         <ul class="nav-list list" >
-            <li class="nav-item"><a class="active nav-link link" href="">Студия</a></li>
-            <li class="nav-item"><a href="./portfolio.html" class="nav-link link" href="">Портфолио</a></li>
-            <li class="nav-item"><a class="nav-link link" href="">Контакты</a></li>
+            <li class="nav-item"><a class="active nav-link link">Студия</a></li>
+            <li class="nav-item"><a href="./portfolio.html" class="nav-link link">Портфолио</a></li>
+            <li class="nav-item"><a class="nav-link link" >Контакты</a></li>
         </ul>
         </nav>
         <ul class="info-link list">
