--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
         <!--COMPONENTS-->
     <header class="header">
-        <nav class="heade-nav">
+        <nav class="header-nav">
             <a class="logo link" >
             <span class="logo-color">Web</span>Studio
         </a>
