Исправила Selection на Section

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
 
     <main>
         <!--MENU-->
-        <selection>
+        <section>
             <h1 hidden>Портфолио</h1>
             <ul class="list">
                 <li class="link">
@@ -67,10 +67,10 @@
                     </button>
                 </li>
             </ul>
-        </selection>
+        </section>
 
         <!--PORTFOLIO-->
-        <selecton class="portfolio">
+        <section class="portfolio">
             <h2 hidden >Сайты</h2>
             <ul class="list">
                 <li class="link">
@@ -119,7 +119,7 @@
                     <p class="preview-name">Приложение</p>
                 </li>
             </ul>
-        </selecton>
+        </section>
     </main>
 
     <!--CONTACTS-->
